--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"prettier": "^3.3.3",
+		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.1",
+		"react-redux": "^9.1.2",
+		"react-router": "^6.27.0",
 		"react-scripts": "5.0.1",
-		"web-vitals": "^2.1.4"
+		"redux": "^5.0.1",
+		"redux-thunk": "^3.1.0",
+		"styled-components": "^6.1.13",
+		"web-vitals": "^2.1.4",
+		"yup": "^1.4.0"
 	},
 	"scripts": {
 		"dev": "react-scripts start",
